footer desc alignment issues resolve

--- a/src/Components/footer.scss
+++ b/src/Components/footer.scss
@@ -54,17 +54,20 @@
 
 @media screen and (width <= 768px) {
     .footer-main-container{
-        overflow-x: scroll;
-        gap: 50px;
-        padding: 20px;
+        overflow-x: scroll !important;
+        gap: 50px !important;
+        padding: 20px !important;
     }
     .social-logo {
-      display: flex;
+      display: flex !important;
     }
     .mobile-no{
-        text-wrap: nowrap;
+        text-wrap: nowrap !important;
     }
     .email{
-        text-wrap: nowrap;
+        text-wrap: nowrap !important;
+    }
+    .brand-desc{
+      text-align: center !important;
     }
 }
